# KAZAN-GAICA

./: README.md  main.py
gaica-cpp-runner/: !README.txt  CMakeLists.txt  build.bat  full_output.txt  output.txt
gaica-cpp-runner/include/: bot_manager.h  dependency_checker.h  game_simulator.h  json_utils.h  logger.h  socket_server.h  types.h  web_server.h
gaica-cpp-runner/src/: bot_manager.cpp  dependency_checker.cpp  game_simulator.cpp  json_utils.cpp  logger.cpp  main.cpp  socket_server.cpp  web_server.cpp
gaica-cpp-runner/web/: client.js  client.js.backup  game_renderer.js  index.html  styles.css
gaica-cpp-runner/web/assets/levels/: test_ldtk_project.ldtk
my_smurf_bot_v71/: main.py
my_smurf_bot_v71/smurf_bot/: __init__.py  client.py  smurf_bot.py
smurf_bot(миша)/: main.py
smurf_bot(миша)/smurf_bot/: __init__.py  client.py  smurf_bot.py
